# talk-booking

./: gitlab-ci.yml
ci_cd/python/: Dockerfile
services/talk_booking/: pyproject.toml
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/web_app/: main.py
