[tool.poetry]
name = "talk_booking"
version = "0.1.0"
description = ""
authors = ["Ytucayasi <saul.ytucayasi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = ">=21.9,<23.3.0"
safety = ">=2.3.5,<3.0.0"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
